core/test/fixtures/invalid-gatherers/require-error.js
/**
 * @license
 * Copyright 2016 Google LLC
 * SPDX-License-Identifier: Apache-2.0
 */

// NOTE: this require path does not resolve correctly.
// eslint-disable-next-line local-rules/require-file-extension
import LighthouseGatherer from '../terrible/path/no/seriously/gatherer.js';

class CustomGatherer extends LighthouseGatherer {}

export default CustomGatherer;
